--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "contributes": {
     "configuration": {
       "type": "object",
-      "title": "Example configuration",
+      "title": "ACL configuration",
       "properties": {
-        "languageServerExample.maxNumberOfProblems": {
+        "aclLanguageServer.maxNumberOfProblems": {
           "scope": "resource",
           "type": "number",
           "default": 100,
           "description": "Controls the maximum number of problems produced by the server."
         },
-        "languageServerExample.trace.server": {
+        "aclLanguageServer.trace.server": {
           "scope": "window",
           "type": "string",
           "enum": [
