--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ikr2202/acl-vscode"
+    "url": "https://github.com/oryxoik/acl-vscode"
   }
 }
